1.新开发销售合同登记流程功能。 2.修复流程相关bug。 3.对销售合同登记、项目立项 html代码进行重构，使页面在不同的显示器下不会变形。

--- a/edge-oa/src/main/webapp/login/css/static.css
+++ b/edge-oa/src/main/webapp/login/css/static.css
@@ -5,3 +5,4 @@
 .u-menu_option li{color:#666;line-height:30px;cursor:pointer;}
 .u-menu_option li:hover{background:#f2f6fa;color:#4391e1;}
 /*操作 End*/
+.u-date_line{float:left;color:#e3e3e3;font-style:normal;padding:0 5px;margin-left: 10px;}
