--- a/edge-oa/src/main/webapp/login/css/static.css
+++ b/edge-oa/src/main/webapp/login/css/static.css
@@ -5,4 +5,4 @@
 .u-menu_option li{color:#666;line-height:30px;cursor:pointer;}
 .u-menu_option li:hover{background:#f2f6fa;color:#4391e1;}
 /*操作 End*/
-.u-date_line{float:left;color:#e3e3e3;font-style:normal;padding:0 5px;margin-left: 10px;}
+.u-date_line{float:left;color:#0D0D0D;font-style:normal;padding:0 5px;margin-left: 10px;}
